--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -42,6 +42,12 @@
             margin-bottom: 15px;
             font-size: 20px;
         }
+        h3 {
+            color: #444;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            font-size: 18px;
+        }
         p {
             margin-bottom: 15px;
             color: #555;
@@ -58,13 +64,35 @@
         .disclaimer {
             margin-top: 40px;
             padding: 20px;
-            background-color: #e3f2fd;
-            border-radius: 8px;
+            background-color: #fff3cd;
+            border-left: 4px solid #ffc107;
+            border-radius: 4px;
         }
         .disclaimer-text {
-            color: #1976d2;
-            text-align: center;
+            color: #856404;
             font-weight: 600;
+            margin-bottom: 10px;
+        }
+        .liability-section {
+            margin-top: 30px;
+            padding: 20px;
+            background-color: #f8d7da;
+            border-left: 4px solid #dc3545;
+            border-radius: 4px;
+        }
+        .liability-section h3 {
+            color: #721c24;
+            margin-top: 0;
+        }
+        .liability-section p {
+            color: #721c24;
+        }
+        a {
+            color: #1976d2;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
         @media (max-width: 768px) {
             .container {
@@ -78,97 +106,139 @@
 </head>
 <body>
     <div class="container">
-        <h1>Privacy Policy</h1>
-        <p class="updated">Last updated: January 2025</p>
+        <div class="disclaimer">
+            <p class="disclaimer-text">⚠️ Important Legal Disclaimer:</p>
+            <p>I am an AI, not an attorney. This document is a template. "No liability" clauses are subject to local laws (e.g., GDPR in Europe or CCPA in California), which often do not allow you to disclaim all liability, particularly regarding gross negligence or statutory rights. You must review this with a legal professional before publishing.</p>
+        </div>
+
+        <h1>Privacy Policy for SixtySec</h1>
+        <p class="updated">Last Updated: January 2025</p>
 
         <h2>1. Introduction</h2>
         <p>
-            Welcome to SixtySec. We respect your privacy and are committed to protecting your
-            personal data. This privacy policy explains how we collect, use, and safeguard your
-            information when you use our journaling application.
+            Welcome to SixtySec ("we," "our," or "us"). We value your trust and are committed to protecting your privacy. This Privacy Policy describes how we collect, use, process, and safeguard your personal information when you access or use our journaling mobile application and related services (collectively, the "Service").
+        </p>
+        <p>
+            By using the Service, you agree to the collection and use of information in accordance with this policy. If you do not agree with this policy, please do not access or use SixtySec.
         </p>
 
         <h2>2. Information We Collect</h2>
-        <p>We collect the following types of information:</p>
+        <p>We collect information to provide a personalized journaling experience. This includes:</p>
+
+        <h3>A. Personal Data You Provide</h3>
         <ul>
-            <li><strong>Account Information:</strong> Name, email address, and password</li>
-            <li><strong>Journal Entries:</strong> Your mood data, journal text, tags, and media (photos, videos, audio)</li>
-            <li><strong>Usage Data:</strong> How you interact with the app</li>
-            <li><strong>Device Information:</strong> Device type, operating system, and app version</li>
+            <li><strong>Account Information:</strong> When you register, we collect your full name, email address, and password (hashed/encrypted).</li>
+            <li><strong>User Content (Journal Data):</strong> We collect the content you create, including text entries, mood logs/ratings, tags, and uploaded media (photos, videos, audio recordings).</li>
+            <li><strong>Note:</strong> You control the sensitivity of the data you enter. We advise against inputting financial data, social security numbers, or critical health data unrelated to the app's purpose.</li>
+            <li><strong>Support Data:</strong> Information you provide when contacting customer support.</li>
+        </ul>
+
+        <h3>B. Automatically Collected Data</h3>
+        <ul>
+            <li><strong>Usage Data:</strong> Details on how you use the app, such as features accessed, time spent on pages, and tap interactions.</li>
+            <li><strong>Device Information:</strong> We collect specific data about your mobile device, including the hardware model, operating system version, unique device identifiers (IDs), and mobile network information.</li>
+            <li><strong>Log Data:</strong> Server logs that may include IP addresses, browser types, and crash reports to help us debug issues.</li>
         </ul>
 
         <h2>3. How We Use Your Information</h2>
-        <p>We use your information to:</p>
+        <p>We use your data for the following specific purposes:</p>
         <ul>
-            <li>Provide and maintain our services</li>
-            <li>Sync your data across devices</li>
-            <li>Generate AI insights and recommendations</li>
-            <li>Improve our app and user experience</li>
-            <li>Send important service notifications</li>
+            <li><strong>Service Delivery:</strong> To operate, maintain, and provide the features of SixtySec.</li>
+            <li><strong>Data Synchronization:</strong> To ensure your journal entries are accessible across all your authorized devices.</li>
+            <li><strong>AI Functionality:</strong> To process your inputs through Artificial Intelligence algorithms to generate summaries, mood insights, and personalized recommendations.</li>
+            <li><strong>Improvement:</strong> To analyze usage trends and improve the app's functionality and user interface.</li>
+            <li><strong>Communication:</strong> To send administrative information, such as security alerts, policy updates, or support responses.</li>
         </ul>
 
-        <h2>4. Data Storage and Security</h2>
-        <p>
-            Your data is stored securely using industry-standard encryption. Journal entries and
-            media are stored in secure cloud storage with strict access controls. We implement
-            appropriate security measures to protect your personal information.
-        </p>
-
-        <h2>5. AI Processing</h2>
-        <p>
-            We use artificial intelligence to generate insights and stories from your journal
-            entries. Your journal content is processed through secure AI services but is never
-            used to train AI models or shared with third parties beyond the AI service provider.
-        </p>
-
-        <h2>6. Data Sharing</h2>
-        <p>We do not sell your personal data. We only share information with:</p>
+        <h2>4. AI Processing and Disclaimers</h2>
+        <p>We utilize Artificial Intelligence (AI) technologies to enhance your journaling experience.</p>
         <ul>
-            <li>Service providers who help us operate the app (cloud storage, authentication)</li>
-            <li>AI service providers for generating insights (with appropriate safeguards)</li>
-            <li>Law enforcement if required by law</li>
+            <li><strong>Processing:</strong> Your journal text and mood data are processed by secure third-party AI providers to generate insights.</li>
+            <li><strong>No Training on User Data:</strong> We strictly enforce that your personal journal data is not used to train the public models of our AI service providers.</li>
+            <li><strong>Accuracy Disclaimer:</strong> AI-generated insights are automated. We do not guarantee the accuracy, reliability, or suitability of AI-generated text or analysis. These insights are for entertainment and self-reflection purposes only and do not constitute psychological or medical advice.</li>
+        </ul>
+
+        <h2>5. Data Storage and Security</h2>
+        <p>We employ industry-standard physical, technical, and administrative security measures designed to protect your data.</p>
+        <ul>
+            <li><strong>Encryption:</strong> Data is encrypted in transit (using TLS/SSL) and at rest (using AES standards).</li>
+            <li><strong>Access Control:</strong> Journal entries are stored in secure cloud environments with strict access limitations.</li>
+        </ul>
+
+        <div class="liability-section">
+            <h3>Security Disclaimer (Limitation of Liability):</h3>
+            <p>
+                While we strive to use commercially acceptable means to protect your Personal Data, no method of transmission over the Internet or method of electronic storage is 100% secure. We cannot guarantee its absolute security. By using the Service, you acknowledge and accept that you assume the risk that your data may be accessed, disclosed, altered, or destroyed by a breach of any of our physical, technical, or managerial safeguards. To the fullest extent permitted by law, SixtySec shall not be liable for unauthorized access to your data.
+            </p>
+        </div>
+
+        <h2>6. Data Sharing and Third Parties</h2>
+        <p>We do not sell, rent, or trade your Personal Data. We share data only in the following limited circumstances:</p>
+        <ul>
+            <li><strong>Service Providers:</strong> We share data with trusted third-party vendors who perform services on our behalf, such as:
+                <ul>
+                    <li>Cloud Hosting (e.g., AWS, Google Cloud)</li>
+                    <li>Authentication Services (e.g., Firebase, Auth0)</li>
+                    <li>AI Processing APIs (subject to strict data privacy agreements)</li>
+                </ul>
+            </li>
+            <li><strong>Legal Requirements:</strong> We may disclose your information if required to do so by law or in the good-faith belief that such action is necessary to comply with state and federal laws, a judicial proceeding, court order, or legal process.</li>
+            <li><strong>Business Transfers:</strong> If SixtySec is involved in a merger, acquisition, or sale of assets, your data may be transferred as part of that transaction.</li>
         </ul>
 
         <h2>7. Your Rights</h2>
-        <p>You have the right to:</p>
+        <p>Depending on your location, you have the following rights regarding your data:</p>
         <ul>
-            <li>Access your personal data</li>
-            <li>Correct inaccurate data</li>
-            <li>Delete your account and all associated data</li>
-            <li>Export your journal data</li>
-            <li>Opt out of AI features</li>
+            <li><strong>Access & Portability:</strong> Request a copy of the data we hold about you.</li>
+            <li><strong>Correction:</strong> Request correction of inaccurate or incomplete data.</li>
+            <li><strong>Deletion:</strong> Request the permanent deletion of your account and all associated data.</li>
+            <li><strong>Opt-Out:</strong> You may opt out of specific AI features within the app settings (though this may limit app functionality).</li>
         </ul>
+        <p>To exercise these rights, contact us at <a href="mailto:privacy@sixtysec.app">privacy@sixtysec.app</a>.</p>
 
         <h2>8. Data Retention</h2>
-        <p>
-            We retain your data as long as your account is active. When you delete your account,
-            all your personal data and journal entries are permanently deleted within 30 days.
-        </p>
+        <p>We retain your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy.</p>
+        <ul>
+            <li><strong>Active Accounts:</strong> We retain data while your account is active.</li>
+            <li><strong>Deleted Accounts:</strong> Upon your request to delete your account, your data will be permanently removed from our active databases within 30 days. Backups may be retained for a slightly longer period solely for disaster recovery purposes before being overwritten.</li>
+        </ul>
 
-        <h2>9. Children's Privacy</h2>
-        <p>
-            Our service is not intended for users under 13 years old. We do not knowingly collect
-            information from children under 13.
-        </p>
-
-        <h2>10. Changes to This Policy</h2>
-        <p>
-            We may update this privacy policy from time to time. We will notify you of significant
-            changes via email or in-app notification.
-        </p>
-
-        <h2>11. Contact Us</h2>
-        <p>
-            If you have questions about this privacy policy, please contact us through the
-            Feedback section in the app or via email at <a href="mailto:privacy@sixtysec.app">privacy@sixtysec.app</a>
-        </p>
-
-        <div class="disclaimer">
-            <p class="disclaimer-text">
-                By using SixtySec, you agree to this Privacy Policy.
+        <div class="liability-section">
+            <h2>9. Limitation of Liability Regarding Data</h2>
+            <p><strong>Please read this section carefully.</strong></p>
+            <p>
+                To the maximum extent permitted by applicable law, in no event shall SixtySec, its affiliates, agents, directors, employees, suppliers, or licensors be liable for:
             </p>
+            <ul>
+                <li>Any indirect, punitive, incidental, special, consequential, or exemplary damages, including without limitation damages for loss of profits, goodwill, use, data, or other intangible losses, arising out of or relating to the use of, or inability to use, this service.</li>
+                <li>Any damage, loss, or injury resulting from hacking, tampering, or other unauthorized access or use of the service or your account or the information contained therein.</li>
+                <li>Any errors, mistakes, or inaccuracies of content, including AI-generated insights.</li>
+            </ul>
         </div>
+
+        <h2>10. Children's Privacy</h2>
+        <p>
+            Our Service is restricted to users aged 13 and older. We do not knowingly collect personally identifiable information from children under 13. If you are a parent or guardian and you are aware that your child has provided us with Personal Data, please contact us immediately so we can remove that information.
+        </p>
+
+        <h2>11. International Data Transfers</h2>
+        <p>
+            If you are accessing the Service from outside the country where our servers are located, your information may be transferred to, stored, and processed in a country where data protection laws may differ from those of your jurisdiction. By using the Service, you consent to this transfer.
+        </p>
+
+        <h2>12. Changes to This Policy</h2>
+        <p>
+            We reserve the right to modify this Privacy Policy at any time. We will notify you of any material changes via email or a prominent notice within the app. Your continued use of the Service after such changes constitutes your acknowledgment and agreement to the modified policy.
+        </p>
+
+        <h2>13. Contact Us</h2>
+        <p>
+            If you have any questions about this Privacy Policy or our data practices, please contact us:
+        </p>
+        <ul>
+            <li><strong>Email:</strong> <a href="mailto:privacy@sixtysec.app">privacy@sixtysec.app</a></li>
+            <li><strong>In-App:</strong> Via the "Feedback" or "Help" section.</li>
+        </ul>
     </div>
 </body>
 </html>
-
