Add disclosure that data may be used to train third-party AI models

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -154,7 +154,7 @@
         <p>We utilize Artificial Intelligence (AI) technologies to enhance your journaling experience.</p>
         <ul>
             <li><strong>Processing:</strong> Your journal text and mood data are processed by secure third-party AI providers to generate insights.</li>
-            <li><strong>No Training on User Data:</strong> We strictly enforce that your personal journal data is not used to train the public models of our AI service providers.</li>
+            <li><strong>AI Model Training:</strong> Your journal content and data may be used by third-party AI service providers to train, improve, or refine their AI models. This includes but is not limited to text analysis, pattern recognition, and model optimization. By using the Service, you consent to this use of your data for AI model training purposes.</li>
             <li><strong>Accuracy Disclaimer:</strong> AI-generated insights are automated. We do not guarantee the accuracy, reliability, or suitability of AI-generated text or analysis. These insights are for entertainment and self-reflection purposes only and do not constitute psychological or medical advice.</li>
         </ul>
 
