Update app name from SixtySec to sixtysecond

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - SixtySec</title>
+    <title>Privacy Policy - sixtysecond</title>
     <style>
         * {
             margin: 0;
@@ -111,15 +111,15 @@
             <p>I am an AI, not an attorney. This document is a template. "No liability" clauses are subject to local laws (e.g., GDPR in Europe or CCPA in California), which often do not allow you to disclaim all liability, particularly regarding gross negligence or statutory rights. You must review this with a legal professional before publishing.</p>
         </div>
 
-        <h1>Privacy Policy for SixtySec</h1>
+        <h1>Privacy Policy for sixtysecond</h1>
         <p class="updated">Last Updated: January 2025</p>
 
         <h2>1. Introduction</h2>
         <p>
-            Welcome to SixtySec ("we," "our," or "us"). We value your trust and are committed to protecting your privacy. This Privacy Policy describes how we collect, use, process, and safeguard your personal information when you access or use our journaling mobile application and related services (collectively, the "Service").
+            Welcome to sixtysecond ("we," "our," or "us"). We value your trust and are committed to protecting your privacy. This Privacy Policy describes how we collect, use, process, and safeguard your personal information when you access or use our journaling mobile application and related services (collectively, the "Service").
         </p>
         <p>
-            By using the Service, you agree to the collection and use of information in accordance with this policy. If you do not agree with this policy, please do not access or use SixtySec.
+            By using the Service, you agree to the collection and use of information in accordance with this policy. If you do not agree with this policy, please do not access or use sixtysecond.
         </p>
 
         <h2>2. Information We Collect</h2>
@@ -143,9 +143,9 @@
         <h2>3. How We Use Your Information</h2>
         <p>We use your data for the following specific purposes:</p>
         <ul>
-            <li><strong>Service Delivery:</strong> To operate, maintain, and provide the features of SixtySec.</li>
+            <li><strong>Service Delivery:</strong> To operate, maintain, and provide the features of sixtysecond.</li>
             <li><strong>Data Synchronization:</strong> To ensure your journal entries are accessible across all your authorized devices.</li>
-            <li><strong>AI Functionality:</strong> To process your inputs through Artificial Intelligence algorithms to generate summaries, mood insights, and personalized recommendations.</li>
+            <li><strong>AI Functionality:</strong> To process your inputs through Artificial Intelligence algorithms to generate summaries, mood insights, and personalized recommendations for sixtysecond.</li>
             <li><strong>Improvement:</strong> To analyze usage trends and improve the app's functionality and user interface.</li>
             <li><strong>Communication:</strong> To send administrative information, such as security alerts, policy updates, or support responses.</li>
         </ul>
@@ -168,7 +168,7 @@
         <div class="liability-section">
             <h3>Security Disclaimer (Limitation of Liability):</h3>
             <p>
-                While we strive to use commercially acceptable means to protect your Personal Data, no method of transmission over the Internet or method of electronic storage is 100% secure. We cannot guarantee its absolute security. By using the Service, you acknowledge and accept that you assume the risk that your data may be accessed, disclosed, altered, or destroyed by a breach of any of our physical, technical, or managerial safeguards. To the fullest extent permitted by law, SixtySec shall not be liable for unauthorized access to your data.
+                While we strive to use commercially acceptable means to protect your Personal Data, no method of transmission over the Internet or method of electronic storage is 100% secure. We cannot guarantee its absolute security. By using the Service, you acknowledge and accept that you assume the risk that your data may be accessed, disclosed, altered, or destroyed by a breach of any of our physical, technical, or managerial safeguards. To the fullest extent permitted by law, sixtysecond shall not be liable for unauthorized access to your data.
             </p>
         </div>
 
@@ -183,7 +183,7 @@
                 </ul>
             </li>
             <li><strong>Legal Requirements:</strong> We may disclose your information if required to do so by law or in the good-faith belief that such action is necessary to comply with state and federal laws, a judicial proceeding, court order, or legal process.</li>
-            <li><strong>Business Transfers:</strong> If SixtySec is involved in a merger, acquisition, or sale of assets, your data may be transferred as part of that transaction.</li>
+            <li><strong>Business Transfers:</strong> If sixtysecond is involved in a merger, acquisition, or sale of assets, your data may be transferred as part of that transaction.</li>
         </ul>
 
         <h2>7. Your Rights</h2>
@@ -207,7 +207,7 @@
             <h2>9. Limitation of Liability Regarding Data</h2>
             <p><strong>Please read this section carefully.</strong></p>
             <p>
-                To the maximum extent permitted by applicable law, in no event shall SixtySec, its affiliates, agents, directors, employees, suppliers, or licensors be liable for:
+                To the maximum extent permitted by applicable law, in no event shall sixtysecond, its affiliates, agents, directors, employees, suppliers, or licensors be liable for:
             </p>
             <ul>
                 <li>Any indirect, punitive, incidental, special, consequential, or exemplary damages, including without limitation damages for loss of profits, goodwill, use, data, or other intangible losses, arising out of or relating to the use of, or inability to use, this service.</li>
