Update Terms of Service: replace SixtySec with sixtysecond and update content

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - SixtySec</title>
+    <title>Terms of Service - sixtysecond</title>
     <style>
         * {
             margin: 0;
@@ -42,6 +42,12 @@
             margin-bottom: 15px;
             font-size: 20px;
         }
+        h3 {
+            color: #444;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            font-size: 18px;
+        }
         p {
             margin-bottom: 15px;
             color: #555;
@@ -54,6 +60,10 @@
         li {
             margin-bottom: 8px;
             color: #555;
+        }
+        strong {
+            color: #333;
+            font-weight: 600;
         }
         .disclaimer {
             margin-top: 40px;
@@ -78,130 +88,136 @@
 </head>
 <body>
     <div class="container">
-        <h1>Terms of Service</h1>
-        <p class="updated">Last updated: January 2025</p>
+        <h1>Terms of Service for sixtysecond</h1>
+        <p class="updated">Last Updated: January 2025</p>
 
         <h2>1. Acceptance of Terms</h2>
         <p>
-            By accessing or using SixtySec, you agree to be bound by these Terms of Service and
-            our Privacy Policy. If you do not agree to these terms, please do not use our service.
+            By creating an account, accessing, or using the sixtysecond mobile application and related services (collectively, the "Service"), you agree to be bound by these Terms of Service ("Terms"). If you do not agree to these Terms, do not use the Service.
         </p>
-
-        <h2>2. Description of Service</h2>
         <p>
-            SixtySec is a digital journaling application that helps you track your mood, record
-            your thoughts, and gain insights through AI-powered analytics. The service includes
-            both free and premium features.
+            These Terms constitute a legally binding agreement between you ("User") and sixtysecond ("Company," "we," "us," or "our").
         </p>
 
-        <h2>3. User Accounts</h2>
+        <h2>2. Eligibility</h2>
+        <p>You must be at least 13 years old to use the Service. By agreeing to these Terms, you represent and warrant to us that:</p>
         <ul>
-            <li>You must be at least 13 years old to use this service</li>
-            <li>You are responsible for maintaining the confidentiality of your account</li>
-            <li>You agree to provide accurate and complete information</li>
-            <li>One person or legal entity may not maintain more than one account</li>
-            <li>You are responsible for all activities under your account</li>
+            <li>You are at least 13 years of age.</li>
+            <li>You have not previously been suspended or removed from the Service.</li>
+            <li>Your registration and your use of the Service is in compliance with any and all applicable laws and regulations.</li>
         </ul>
 
-        <h2>4. Subscription and Payments</h2>
+        <h2>3. User Accounts and Security</h2>
+        <p>To access certain features, you must register for an account. You are responsible for maintaining the confidentiality of your account credentials.</p>
         <ul>
-            <li>Premium features require a paid subscription</li>
-            <li>Subscriptions auto-renew unless cancelled at least 24 hours before renewal</li>
-            <li>You can cancel your subscription anytime from your device settings</li>
-            <li>No refunds for partial subscription periods</li>
-            <li>Prices are subject to change with notice</li>
+            <li><strong>Responsibility:</strong> You are fully responsible for all activities that occur under your account.</li>
+            <li><strong>Notification:</strong> You agree to notify us immediately of any unauthorized use of your account.</li>
+            <li><strong>No Liability:</strong> sixtysecond will not be liable for any loss or damage arising from your failure to comply with this section or from unauthorized access to your account.</li>
         </ul>
 
-        <h2>5. Cancellation Policy</h2>
-        <p>You may cancel your subscription at any time:</p>
-        <ul>
-            <li><strong>iOS:</strong> Settings → Apple ID → Subscriptions → SixtySec → Cancel</li>
-            <li><strong>Android:</strong> Play Store → Account → Subscriptions → SixtySec → Cancel</li>
-        </ul>
+        <h2>4. User Content and AI Training License</h2>
+        <h3>4.1 Ownership</h3>
         <p>
-            Your premium features remain active until the end of the current billing period.
-            Cancellations are immediate and easy - no questions asked, no hidden fees.
+            You retain ownership of the journal entries, text, photos, videos, and other content ("User Content") that you post or store on the Service.
+        </p>
+        <h3>4.2 License to sixtysecond</h3>
+        <p>
+            By submitting User Content to the Service, you grant sixtysecond a worldwide, non-exclusive, royalty-free, fully paid right and license to host, store, transfer, display, perform, reproduce, modify, and distribute your User Content for the purpose of operating, developing, providing, and improving the Service.
+        </p>
+        <h3>4.3 AI Training and Improvement (Crucial)</h3>
+        <p>
+            You acknowledge and agree that sixtysecond may use your User Content, in anonymized or aggregated form, to train, tune, and improve our Artificial Intelligence (AI) models and algorithms. By using the Service, you explicitly grant us the right to process your data for machine learning and AI development purposes.
         </p>
 
-        <h2>6. User Content</h2>
+        <h2>5. AI Services Disclaimer</h2>
+        <p>The Service utilizes Artificial Intelligence to generate insights, summaries, and recommendations.</p>
         <ul>
-            <li>You retain all rights to your journal entries and media</li>
-            <li>You grant us license to store and process your content to provide services</li>
-            <li>You are responsible for your content and its legality</li>
-            <li>We reserve the right to remove content that violates these terms</li>
+            <li><strong>No Professional Advice:</strong> AI outputs are for entertainment and self-reflection only. They do not constitute medical, psychological, legal, or financial advice.</li>
+            <li><strong>Accuracy:</strong> AI models may "hallucinate" or generate incorrect, biased, or nonsensical information. We do not warrant the accuracy of any AI-generated content.</li>
+            <li><strong>Reliance:</strong> You should not rely on the Service for critical decision-making or in emergency situations.</li>
         </ul>
 
-        <h2>7. Prohibited Uses</h2>
+        <h2>6. Prohibited Conduct</h2>
         <p>You agree not to:</p>
         <ul>
-            <li>Use the service for illegal purposes</li>
-            <li>Attempt to hack or compromise the security of the service</li>
-            <li>Use automated systems to access the service</li>
-            <li>Share your account with others</li>
-            <li>Reverse engineer or copy any part of the service</li>
+            <li>Use the Service for any illegal purpose.</li>
+            <li>Violate, or encourage the violation of, the legal rights of others.</li>
+            <li>Attempt to bypass any security features or access controls of the Service.</li>
+            <li>Reverse engineer or attempt to extract the source code of the software.</li>
+            <li>Use the Service to transmit malware, viruses, or destructive code.</li>
         </ul>
 
-        <h2>8. Limitation of Liability</h2>
-        <p><strong>SIXTYSEC IS PROVIDED "AS IS" WITHOUT WARRANTIES OF ANY KIND. WE ARE NOT LIABLE FOR:</strong></p>
+        <h2>7. Intellectual Property</h2>
+        <p>
+            The Service interface, graphics, design, compilation, information, computer code, and all other elements of the Service (excluding User Content) are the property of sixtysecond and are protected by intellectual property laws.
+        </p>
+
+        <h2>8. Disclaimers (No Warranties)</h2>
+        <p><strong>THE SERVICE IS PROVIDED ON AN "AS IS" AND "AS AVAILABLE" BASIS.</strong></p>
+        <p>
+            TO THE FULLEST EXTENT PERMITTED BY LAW, SIXTYSECOND DISCLAIMS ALL WARRANTIES, WHETHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT.
+        </p>
+        <p><strong>WE DO NOT WARRANT THAT:</strong></p>
         <ul>
-            <li>Any indirect, incidental, or consequential damages</li>
-            <li>Loss of data or content</li>
-            <li>Service interruptions or errors</li>
-            <li>Actions taken based on AI insights or recommendations</li>
-            <li>Any health-related decisions or outcomes</li>
+            <li>THE SERVICE WILL BE UNINTERRUPTED, SECURE, OR FREE OF ERRORS OR VIRUSES.</li>
+            <li>THE RESULTS OR INSIGHTS OBTAINED FROM THE AI WILL BE ACCURATE OR RELIABLE.</li>
+            <li>YOUR DATA WILL NOT BE LOST OR CORRUPTED.</li>
+        </ul>
+
+        <h2>9. Limitation of Liability</h2>
+        <p><strong>READ THIS SECTION CAREFULLY. IT LIMITS OUR LIABILITY TO YOU.</strong></p>
+        <p>
+            TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, IN NO EVENT SHALL SIXTYSECOND, ITS AFFILIATES, DIRECTORS, EMPLOYEES, OR LICENSORS BE LIABLE FOR ANY:
+        </p>
+        <ul>
+            <li>INDIRECT, PUNITIVE, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR EXEMPLARY DAMAGES.</li>
+            <li>DAMAGES FOR LOSS OF PROFITS, GOODWILL, USE, DATA, OR OTHER INTANGIBLE LOSSES.</li>
+            <li>DAMAGES RESULTING FROM HACKING, TAMPERING, OR OTHER UNAUTHORIZED ACCESS OR USE OF THE SERVICE OR YOUR ACCOUNT.</li>
+            <li>DAMAGES RESULTING FROM ERRORS, MISTAKES, OR INACCURACIES OF CONTENT (INCLUDING AI-GENERATED INSIGHTS).</li>
         </ul>
         <p>
-            SixtySec is not a substitute for professional mental health care. Always consult
-            qualified professionals for health concerns.
+            <strong>TOTAL LIABILITY:</strong> IN NO EVENT SHALL SIXTYSECOND'S TOTAL LIABILITY TO YOU FOR ALL CLAIMS EXCEED THE AMOUNT YOU HAVE PAID US IN THE PAST SIX MONTHS, OR $100.00 USD, WHICHEVER IS GREATER.
+        </p>
+        <p>
+            THIS LIMITATION OF LIABILITY SECTION APPLIES WHETHER THE ALLEGED LIABILITY IS BASED ON CONTRACT, TORT, NEGLIGENCE, STRICT LIABILITY, OR ANY OTHER BASIS, EVEN IF WE HAVE BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         </p>
 
-        <h2>9. No Medical Advice</h2>
+        <h2>10. Indemnification</h2>
         <p>
-            SixtySec is a journaling tool, not a medical device or mental health service. AI
-            insights are for informational purposes only and should not be considered medical,
-            psychological, or therapeutic advice. If you are experiencing a mental health crisis,
-            please contact emergency services or a mental health professional immediately.
+            You agree to defend, indemnify, and hold harmless sixtysecond and its officers, directors, employees, and agents from and against any claims, liabilities, damages, losses, and expenses, including reasonable legal and accounting fees, arising out of or in any way connected with:
         </p>
-
-        <h2>10. Disclaimer of Warranties</h2>
-        <p>
-            We make no warranties about the accuracy, reliability, or availability of the service.
-            We are not responsible for any decisions you make based on content or insights
-            provided by the app.
-        </p>
+        <ul>
+            <li>Your access to or use of the Service.</li>
+            <li>Your violation of these Terms.</li>
+            <li>Your User Content.</li>
+            <li>Your violation of any third-party right, including intellectual property or privacy rights.</li>
+        </ul>
 
         <h2>11. Termination</h2>
         <p>
-            We reserve the right to terminate or suspend your account at any time for violations
-            of these terms. You may delete your account at any time from the app settings.
+            We may terminate or suspend your account and access to the Service immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms. Upon termination, your right to use the Service will immediately cease.
         </p>
 
-        <h2>12. Changes to Terms</h2>
+        <h2>12. Governing Law</h2>
         <p>
-            We may modify these terms at any time. Continued use of the service constitutes
-            acceptance of modified terms. Material changes will be communicated via email or
-            in-app notification.
+            These Terms shall be governed by and construed in accordance with the laws of [Insert Your State/Country], without regard to its conflict of law provisions. Any disputes arising from these Terms shall be resolved in the state or federal courts located in [Insert Your Jurisdiction].
         </p>
 
-        <h2>13. Governing Law</h2>
+        <h2>13. Changes to Terms</h2>
         <p>
-            These terms are governed by applicable laws. Any disputes shall be resolved through
-            binding arbitration.
+            We reserve the right, at our sole discretion, to modify or replace these Terms at any time. We will provide notice of any material changes via email or in-app notification. By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms.
         </p>
 
-        <h2>14. Contact</h2>
+        <h2>14. Contact Us</h2>
         <p>
-            For questions about these terms, contact us through the Feedback section in the app
-            or via email at <a href="mailto:support@sixtysec.app">support@sixtysec.app</a>
+            If you have any questions about these Terms, please contact us at: <a href="mailto:legal@sixtysecond.app">legal@sixtysecond.app</a>
         </p>
 
         <div class="disclaimer">
             <p class="disclaimer-text">
-                By using SixtySec, you acknowledge that you have read and agree to these Terms of
-                Service.
+                By using sixtysecond, you acknowledge that you have read and agree to these Terms of Service.
             </p>
         </div>
     </div>
 </body>
 </html>
-
