Remove AI disclaimer and update email to sixtysecond.app

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -106,11 +106,6 @@
 </head>
 <body>
     <div class="container">
-        <div class="disclaimer">
-            <p class="disclaimer-text">⚠️ Important Legal Disclaimer:</p>
-            <p>I am an AI, not an attorney. This document is a template. "No liability" clauses are subject to local laws (e.g., GDPR in Europe or CCPA in California), which often do not allow you to disclaim all liability, particularly regarding gross negligence or statutory rights. You must review this with a legal professional before publishing.</p>
-        </div>
-
         <h1>Privacy Policy for sixtysecond</h1>
         <p class="updated">Last Updated: January 2025</p>
 
@@ -194,7 +189,7 @@
             <li><strong>Deletion:</strong> Request the permanent deletion of your account and all associated data.</li>
             <li><strong>Opt-Out:</strong> You may opt out of specific AI features within the app settings (though this may limit app functionality).</li>
         </ul>
-        <p>To exercise these rights, contact us at <a href="mailto:privacy@sixtysec.app">privacy@sixtysec.app</a>.</p>
+            <p>To exercise these rights, contact us at <a href="mailto:privacy@sixtysecond.app">privacy@sixtysecond.app</a>.</p>
 
         <h2>8. Data Retention</h2>
         <p>We retain your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy.</p>
@@ -236,7 +231,7 @@
             If you have any questions about this Privacy Policy or our data practices, please contact us:
         </p>
         <ul>
-            <li><strong>Email:</strong> <a href="mailto:privacy@sixtysec.app">privacy@sixtysec.app</a></li>
+            <li><strong>Email:</strong> <a href="mailto:privacy@sixtysecond.app">privacy@sixtysecond.app</a></li>
             <li><strong>In-App:</strong> Via the "Feedback" or "Help" section.</li>
         </ul>
     </div>
