--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -234,6 +234,12 @@
             <li><strong>Email:</strong> <a href="mailto:privacy@sixtysecond.app">privacy@sixtysecond.app</a></li>
             <li><strong>In-App:</strong> Via the "Feedback" or "Help" section.</li>
         </ul>
+
+        <div style="margin-top: 40px; padding-top: 20px; border-top: 1px solid #e0e0e0; text-align: center;">
+            <p style="font-size: 12px; color: #999;">
+                © 2025 sixtysecond. All rights reserved.
+            </p>
+        </div>
     </div>
 </body>
 </html>
