--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -218,6 +218,12 @@
                 By using sixtysecond, you acknowledge that you have read and agree to these Terms of Service.
             </p>
         </div>
+
+        <div style="margin-top: 40px; padding-top: 20px; border-top: 1px solid #e0e0e0; text-align: center;">
+            <p style="font-size: 12px; color: #999;">
+                © 2025 sixtysecond. All rights reserved.
+            </p>
+        </div>
     </div>
 </body>
 </html>
