Update all email addresses to sixtysecapp@gmail.com

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -189,7 +189,7 @@
             <li><strong>Deletion:</strong> Request the permanent deletion of your account and all associated data.</li>
             <li><strong>Opt-Out:</strong> You may opt out of specific AI features within the app settings (though this may limit app functionality).</li>
         </ul>
-            <p>To exercise these rights, contact us at <a href="mailto:privacy@sixtysecond.app">privacy@sixtysecond.app</a>.</p>
+            <p>To exercise these rights, contact us at <a href="mailto:sixtysecapp@gmail.com">sixtysecapp@gmail.com</a>.</p>
 
         <h2>8. Data Retention</h2>
         <p>We retain your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy.</p>
@@ -231,7 +231,7 @@
             If you have any questions about this Privacy Policy or our data practices, please contact us:
         </p>
         <ul>
-            <li><strong>Email:</strong> <a href="mailto:privacy@sixtysecond.app">privacy@sixtysecond.app</a></li>
+            <li><strong>Email:</strong> <a href="mailto:sixtysecapp@gmail.com">sixtysecapp@gmail.com</a></li>
             <li><strong>In-App:</strong> Via the "Feedback" or "Help" section.</li>
         </ul>
 
