--- a/support.html
+++ b/support.html
@@ -151,15 +151,15 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <strong>General Support</strong>
-                    <a href="mailto:support@sixtysecond.app">support@sixtysecond.app</a>
+                    <a href="mailto:sixtysecapp@gmail.com">sixtysecapp@gmail.com</a>
                 </div>
                 <div class="contact-item">
                     <strong>Privacy & Data</strong>
-                    <a href="mailto:privacy@sixtysecond.app">privacy@sixtysecond.app</a>
+                    <a href="mailto:sixtysecapp@gmail.com">sixtysecapp@gmail.com</a>
                 </div>
                 <div class="contact-item">
                     <strong>Legal Inquiries</strong>
-                    <a href="mailto:legal@sixtysecond.app">legal@sixtysecond.app</a>
+                    <a href="mailto:sixtysecapp@gmail.com">sixtysecapp@gmail.com</a>
                 </div>
             </div>
         </div>
