--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -210,7 +210,7 @@
 
         <h2>14. Contact Us</h2>
         <p>
-            If you have any questions about these Terms, please contact us at: <a href="mailto:legal@sixtysecond.app">legal@sixtysecond.app</a>
+            If you have any questions about these Terms, please contact us at: <a href="mailto:sixtysecapp@gmail.com">sixtysecapp@gmail.com</a>
         </p>
 
         <div class="disclaimer">
