--- a/index.html
+++ b/index.html
@@ -14,41 +14,95 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.6;
-            color: #333;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: #2D3436;
+            background: linear-gradient(135deg, #DCD0FF 0%, #FFDAC1 50%, #FDFBF7 100%);
             min-height: 100vh;
             padding: 20px;
+            position: relative;
+            overflow-x: hidden;
+        }
+        /* Floating background elements for emotive feel */
+        body::before,
+        body::after {
+            content: '';
+            position: fixed;
+            border-radius: 50%;
+            opacity: 0.1;
+            pointer-events: none;
+            z-index: 0;
+        }
+        body::before {
+            width: 400px;
+            height: 400px;
+            background: #FFB7B2;
+            top: -200px;
+            right: -200px;
+            animation: float 20s ease-in-out infinite;
+        }
+        body::after {
+            width: 300px;
+            height: 300px;
+            background: #B2DFDB;
+            bottom: -150px;
+            left: -150px;
+            animation: float 25s ease-in-out infinite reverse;
+        }
+        @keyframes float {
+            0%, 100% { transform: translate(0, 0) rotate(0deg); }
+            50% { transform: translate(30px, 30px) rotate(180deg); }
         }
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            background: white;
-            border-radius: 16px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.2);
-            overflow: hidden;
+            position: relative;
+            z-index: 1;
         }
         .hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 80px 40px;
             text-align: center;
+            padding: 80px 20px 60px;
+            position: relative;
+        }
+        .app-icon {
+            width: 120px;
+            height: 120px;
+            margin: 0 auto 30px;
+            border-radius: 28px;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
+            background: rgba(255, 255, 255, 0.9);
+            padding: 10px;
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+        }
+        .app-icon img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            border-radius: 20px;
         }
         .hero h1 {
-            font-size: 56px;
+            font-size: 64px;
             font-weight: 700;
             margin-bottom: 20px;
-            letter-spacing: -1px;
+            letter-spacing: -2px;
+            background: linear-gradient(135deg, #2D3436 0%, #636E72 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
         .hero .subtitle {
             font-size: 24px;
-            margin-bottom: 40px;
-            opacity: 0.95;
-            font-weight: 300;
+            margin-bottom: 15px;
+            color: #636E72;
+            font-weight: 400;
         }
         .hero .tagline {
             font-size: 18px;
             margin-bottom: 50px;
-            opacity: 0.9;
+            color: #636E72;
+            font-weight: 300;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
         }
         .cta-buttons {
             display: flex;
@@ -61,91 +115,118 @@
             display: inline-flex;
             align-items: center;
             gap: 12px;
-            padding: 16px 32px;
-            background: rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(10px);
-            border: 2px solid rgba(255, 255, 255, 0.3);
-            border-radius: 12px;
-            color: white;
+            padding: 18px 36px;
+            background: rgba(255, 255, 255, 0.65);
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            border-radius: 24px;
+            color: #2D3436;
             text-decoration: none;
             font-weight: 600;
             font-size: 16px;
             transition: all 0.3s ease;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
         }
         .app-button:hover {
-            background: rgba(255, 255, 255, 0.3);
-            transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+            background: rgba(255, 255, 255, 0.85);
+            transform: translateY(-3px);
+            box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
         }
-        .app-button img {
+        .app-button svg {
             width: 24px;
             height: 24px;
         }
         .content {
-            padding: 60px 40px;
+            padding: 0 20px 60px;
         }
         .section {
             margin-bottom: 60px;
         }
-        .section h2 {
-            color: #636E72;
-            font-size: 36px;
-            margin-bottom: 30px;
+        .section-title {
+            color: #2D3436;
+            font-size: 42px;
+            margin-bottom: 40px;
             text-align: center;
-        }
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            margin-top: 40px;
-        }
-        .feature-card {
-            background: #f8f9fa;
-            padding: 30px;
-            border-radius: 12px;
-            border-left: 4px solid #667eea;
-            transition: transform 0.3s ease;
-        }
-        .feature-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-        }
-        .feature-card h3 {
-            color: #333;
-            font-size: 22px;
-            margin-bottom: 15px;
-        }
-        .feature-card p {
-            color: #555;
-            line-height: 1.8;
+            font-weight: 700;
+            letter-spacing: -1px;
         }
         .stats {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 30px;
+            gap: 24px;
             margin: 40px 0;
         }
-        .stat {
+        .stat-card {
+            background: rgba(255, 255, 255, 0.65);
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            border-radius: 24px;
+            padding: 32px 24px;
             text-align: center;
-            padding: 30px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            border-radius: 12px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.08);
+            transition: transform 0.3s ease;
+        }
+        .stat-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 12px 40px rgba(0, 0, 0, 0.12);
         }
         .stat-number {
-            font-size: 48px;
+            font-size: 56px;
             font-weight: 700;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
+            background: linear-gradient(135deg, #FF6B9D 0%, #FFB7B2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
         .stat-label {
             font-size: 16px;
-            opacity: 0.9;
+            color: #636E72;
+            font-weight: 500;
+        }
+        .features {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 24px;
+            margin-top: 40px;
+        }
+        .feature-card {
+            background: rgba(255, 255, 255, 0.65);
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            border-radius: 24px;
+            padding: 32px;
+            transition: all 0.3s ease;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.08);
+        }
+        .feature-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 12px 40px rgba(0, 0, 0, 0.12);
+            background: rgba(255, 255, 255, 0.75);
+        }
+        .feature-card h3 {
+            color: #2D3436;
+            font-size: 24px;
+            margin-bottom: 16px;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+        }
+        .feature-card p {
+            color: #636E72;
+            line-height: 1.8;
+            font-size: 16px;
         }
         .footer {
-            background: #f8f9fa;
+            background: rgba(255, 255, 255, 0.65);
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            border-radius: 24px;
             padding: 40px;
             text-align: center;
-            border-top: 1px solid #e0e0e0;
+            margin-top: 60px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.08);
         }
         .footer-links {
             display: flex;
@@ -155,38 +236,71 @@
             margin-bottom: 20px;
         }
         .footer-links a {
-            color: #667eea;
+            color: #636E72;
             text-decoration: none;
             font-weight: 500;
             transition: color 0.3s ease;
+            font-size: 16px;
         }
         .footer-links a:hover {
-            color: #764ba2;
+            color: #FF6B9D;
             text-decoration: underline;
         }
         .copyright {
-            color: #666;
+            color: #636E72;
             font-size: 14px;
             margin-top: 20px;
         }
+        .quote-section {
+            background: rgba(255, 255, 255, 0.65);
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            border-radius: 24px;
+            padding: 48px;
+            margin: 60px 0;
+            text-align: center;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.08);
+        }
+        .quote-text {
+            font-size: 24px;
+            color: #2D3436;
+            font-style: italic;
+            line-height: 1.6;
+            margin-bottom: 16px;
+            font-weight: 300;
+        }
+        .quote-author {
+            font-size: 16px;
+            color: #636E72;
+        }
         @media (max-width: 768px) {
             .hero {
-                padding: 60px 20px;
+                padding: 60px 20px 40px;
             }
             .hero h1 {
-                font-size: 36px;
+                font-size: 42px;
             }
             .hero .subtitle {
                 font-size: 20px;
             }
-            .content {
-                padding: 40px 20px;
+            .hero .tagline {
+                font-size: 16px;
             }
-            .section h2 {
-                font-size: 28px;
+            .app-icon {
+                width: 100px;
+                height: 100px;
+            }
+            .content {
+                padding: 0 20px 40px;
+            }
+            .section-title {
+                font-size: 32px;
             }
             .features {
                 grid-template-columns: 1fr;
+            }
+            .stats {
+                grid-template-columns: repeat(2, 1fr);
             }
             .cta-buttons {
                 flex-direction: column;
@@ -195,15 +309,32 @@
             .app-button {
                 justify-content: center;
             }
+            .quote-section {
+                padding: 32px 24px;
+            }
+            .quote-text {
+                font-size: 20px;
+            }
+        }
+        @media (max-width: 480px) {
+            .stats {
+                grid-template-columns: 1fr;
+            }
+            .hero h1 {
+                font-size: 36px;
+            }
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="hero">
+            <div class="app-icon">
+                <img src="/assets/images/icon.png" alt="sixtysecond app icon" onerror="this.style.display='none'">
+            </div>
             <h1>sixtysecond</h1>
             <p class="subtitle">Journal Your Journey with AI Insights</p>
-            <p class="tagline">Transform your life through research-backed journaling</p>
+            <p class="tagline">Transform your life through research-backed journaling. Capture every feeling, track your progress, and discover insights about yourself.</p>
             <div class="cta-buttons">
                 <a href="#" class="app-button" id="ios-button">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
@@ -221,22 +352,27 @@
         </div>
 
         <div class="content">
+            <div class="quote-section">
+                <p class="quote-text">"Every moment matters. Every feeling is valid. Your journey of self-discovery starts with a single word."</p>
+                <p class="quote-author">— sixtysecond</p>
+            </div>
+
             <div class="section">
-                <h2>Why Journaling Works</h2>
+                <h2 class="section-title">Why Journaling Works</h2>
                 <div class="stats">
-                    <div class="stat">
+                    <div class="stat-card">
                         <div class="stat-number">47%</div>
                         <div class="stat-label">Reduction in Stress</div>
                     </div>
-                    <div class="stat">
+                    <div class="stat-card">
                         <div class="stat-number">42%</div>
                         <div class="stat-label">More Likely to Achieve Goals</div>
                     </div>
-                    <div class="stat">
+                    <div class="stat-card">
                         <div class="stat-number">23%</div>
                         <div class="stat-label">Decrease in Anxiety</div>
                     </div>
-                    <div class="stat">
+                    <div class="stat-card">
                         <div class="stat-number">68%</div>
                         <div class="stat-label">Higher Self-Awareness</div>
                     </div>
@@ -244,10 +380,10 @@
             </div>
 
             <div class="section">
-                <h2>Core Features</h2>
+                <h2 class="section-title">Features That Understand You</h2>
                 <div class="features">
                     <div class="feature-card">
-                        <h3>🎯 Effortless Emotional Capture</h3>
+                        <h3>💭 Effortless Emotional Capture</h3>
                         <p>Give voice to the silence via text, speech, or video. Built on evidence-based cognitive restructuring with 9% anxiety reduction through multimedia journaling.</p>
                     </div>
                     <div class="feature-card">
@@ -274,7 +410,7 @@
             </div>
 
             <div class="section">
-                <h2>What Makes sixtysecond Different</h2>
+                <h2 class="section-title">What Makes sixtysecond Different</h2>
                 <div class="features">
                     <div class="feature-card">
                         <h3>✅ Research-Backed Methods</h3>
@@ -324,4 +460,3 @@
     </script>
 </body>
 </html>
-
