--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -14,7 +14,8 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.6;
             color: #333;
-            background-color: #f8f9fa;
+            background: linear-gradient(135deg, #FFB7B2 0%, #FF9FB8 25%, #FF8FA3 50%, #FFB7C1 100%);
+            min-height: 100vh;
             padding: 20px;
         }
         .container {
@@ -76,6 +77,27 @@
             text-align: center;
             font-weight: 600;
         }
+        .app-icon-container {
+            text-align: center;
+            margin-bottom: 30px;
+            padding-top: 20px;
+        }
+        .app-icon {
+            width: 96px;
+            height: 96px;
+            border-radius: 24px;
+            margin: 0 auto;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            background: rgba(255, 255, 255, 0.95);
+            padding: 8px;
+            border: 1px solid rgba(255, 255, 255, 0.6);
+        }
+        .app-icon img {
+            width: 100%;
+            height: 100%;
+            border-radius: 16px;
+            object-fit: cover;
+        }
         @media (max-width: 768px) {
             .container {
                 padding: 20px;
@@ -88,6 +110,11 @@
 </head>
 <body>
     <div class="container">
+        <div class="app-icon-container">
+            <div class="app-icon">
+                <img src="assets/images/icon.png" alt="sixtysecond app icon" />
+            </div>
+        </div>
         <h1>Terms of Service for sixtysecond</h1>
         <p class="updated">Last Updated: January 2025</p>
 
